--- a/Vishruth/expense_track_vish/pubspec.yaml
+++ b/Vishruth/expense_track_vish/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   datetime_picker_formfield: ^1.0.0
+  camera: 
 
 dev_dependencies:
   flutter_test:
