--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - images/sample.jpg
+    - images/achintyologo.png
 
   fonts:
     - family:  MyFlutterApp
